Translate the QRS activity week rules for SWLs

--- a/se-euqrs.html
+++ b/se-euqrs.html
@@ -272,8 +272,7 @@ stationerna.</p>
   Undvik den lägre delen av telegrafidelen av banden.</p>
 <p>De vänner av telegrafi som ännu inte är redo att sända på telegrafi
   är välkomna att
-  läsa <a href="https://eucw.org/euqrsswl.html">reglerna för
-  lyssnaramatörer (ej översatta)</a>.</p>
+  läsa <a href="se-euqrsswl.html">reglerna för lyssnaramatörer</a>.</p>
 
 <p>RESULTATLISTOR</p>
 <p>(ej översatta)</p>
