Factor out the default layout head and body

--- a/se-eunov.html
+++ b/se-eunov.html
@@ -1,13 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: eunov.html
+title: EuCWs nybörjardiplom
+layout: default
 ---
-<html>
-<head>
-<title>EuCWs nybörjardiplom</title>
-<link REL="SHORTCUT ICON" href="imgs/eucw.ico">
-</head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <table width="100%">
 <tr>
 <td align="left"><img src="imgsclub/gqrp.gif" alt=""></td>
@@ -69,5 +65,3 @@ för att se diplomets utseende.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
