--- a/se-gtc.html
+++ b/se-gtc.html
@@ -1,13 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: gtc.html
+title: "ECM@AGCW: Beskrivning av GTC (Grekland)"
+layout: default
 ---
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<html>
-<head>
-<title>ECM@AGCW: Beskrivning av GTC (Grekland)</title>
-</head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center>
 <hr width="100%">
 </center>
@@ -268,6 +264,3 @@ SV - CW - Medlemmar
 </p>
 
 {% include translated.html %}
-</body>
-</html>
-
