--- a/se-index.html
+++ b/se-index.html
@@ -1,17 +1,10 @@
 ---
 priority: 3
-title: EuCW-sidorna på svenska
+title: EuCW
 translated: 2007-05-14
 originalhref: index.html
+layout: default
 ---
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<html>
-<head>
-<title>EuCW</title>
-<meta charset="UTF-8">
-<link rel="SHORTCUT ICON" href="imgs/eucw.ico">
-</head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <table width="100%" border="0" cellpadding="2">
 <tr valign="top">
 <td bgcolor="#0000FF" width="152" align="left">
@@ -179,5 +172,3 @@ AGCW 897</font>
 </tr>
 </table>
 {% include translated.html %}
-</body>
-</html>
