--- a/se-op.html
+++ b/se-op.html
@@ -1,16 +1,9 @@
 ---
 originalhref: op.html
 translated: 2024-03-31
+title: EuCW Tips för telegrafi-QSO
+layout: default
 ---
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-
-<html>
-<head>
-  <title>EuCW Tips för telegrafi-QSO</title>
-  <link rel="SHORTCUT ICON" href="eucw.ico">
-</head>
-
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
   <table width="100%">
     <tr>
       <td align="left"><img src="eucwflag.gif" alt=""></td>
@@ -132,6 +125,3 @@ Tänk på att all text på eucw.org tillhör public domain.
 <a href="dp.pdf"><font size="-2">Integritets-policy (ej översatt)</font></a>
 
 {% include translated.html %}
-
-</body>
-</html>
