--- a/se-eucons.html
+++ b/se-eucons.html
@@ -1,14 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: eucons.html
+title: EuCWs konstitution
+layout: default
 ---
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<html>
-<head>
-<title>EuCWs konstitution</title>
-<link rel="SHORTCUT ICON" href="imgs/eucw.ico">
-</head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <p align="center"><img src="imgs/eucwflag.gif" alt=""></p>
 
 <p align="center">
@@ -231,5 +226,3 @@ för en komplett lista av medlemsklubbar och dagen för deras medlemsskap</p>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
