--- a/se-eucw.html
+++ b/se-eucw.html
@@ -1,14 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: eucw.html
+title: EuCW
+layout: default
 ---
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>EuCW</title>
-<link rel="SHORTCUT ICON" href="imgs/eucw.ico">
-</head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <table width="100%" summary="">
 <tr>
 <td align="left"><img src="imgs/eucwflag.gif" alt=""></td>
@@ -456,6 +451,3 @@ given tidsperiod.
 <a href="se-index.html">Tillbaka</a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
-
