--- a/se-eucwa.html
+++ b/se-eucwa.html
@@ -1,14 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: eucwa.html
+title: EuCW Diplomet
+layout: default
 ---
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<html>
-<head>
-<title>EuCW Diplomet</title>
-<link rel="SHORTCUT ICON" href="imgs/eucw.ico">
-</head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <table width="100%">
 <tr>
 <td align="left"><img src="imgsclub/hcc.gif" alt=""></td>
@@ -130,5 +125,3 @@ E-mail:...joe (at-symbol) dk7vw.de...</p>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
