--- a/se-eucwh.html
+++ b/se-eucwh.html
@@ -1,14 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: eucwh.html
+title: EuCWs historia
+layout: default
 ---
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<html>
-<head>
-<title>EuCWs historia</title>
-<link rel="SHORTCUT ICON" href="imgs/eucw.ico">
-</head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <img src="imgs/eucwflag.gif" alt="">
 <h1>Europeiska CW-förbundets historia</h1>
 
@@ -314,6 +309,3 @@ G4FAI
 </p>
 
 {% include translated.html %}
-</body>
-</html>
-
