--- a/se-euqrs.html
+++ b/se-euqrs.html
@@ -1,13 +1,9 @@
 ---
 translated: 2024-03-31
 originalhref: euqrs.html
+title: EuCWs QRS-vecka
+layout: default
 ---
-<html>
-<head>
-<title>EuCWs QRS-vecka</title>
-<link rel="SHORTCUT ICON" href="eucw.ico">
-</head>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <table width="100%">
 <tr>
 <td align="left"><img src="eucwflag.gif" alt=""></td>
@@ -305,5 +301,3 @@ stationerna.</p>
 EuCWs QRS-vecka sponsras och organiseras av AGCW-DL.
 <a href="https://eucw.org/dp.pdf"><font size="-2">Integritetspolicy (ej översatt)</font></a>
 {% include translated.html %}
-</body>
-</html>
