Move the rest of the pages to the new layout

--- a/se-9acwg.html
+++ b/se-9acwg.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: 9acwg.html
+title: Croatian Telegraphy Group (Kroatiska telegrafigruppen)
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="flags/hr.gif" alt="" align=left></p>
@@ -32,6 +32,3 @@ Sekreterare: <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-
-</body>
-</html>
