--- a/se-bqc.html
+++ b/se-bqc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: bqc.html
+title: "BQC: Benelux QRP Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/bqc.gif" alt="" align=left></p>
@@ -25,6 +25,3 @@ Benelux QRP Club, Postbus 15, 2100 AA, Heemstede, Nederländerna
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-
-</body>
-</html>
