--- a/se-fists.html
+++ b/se-fists.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: fists.html
+title: FISTS - The International Morse Preservation Society
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <p><img src="imgsclub/fists.gif" alt="" align=left>
 <br clear="left">
 <p>
@@ -34,5 +34,3 @@ för att se den amerikanska grenens website.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
