--- a/se-foc.html
+++ b/se-foc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: foc.html
+title: "FOC: First Class Operators Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/foc.gif" alt="" align=left></p>
@@ -27,5 +27,3 @@ evenemang i världen.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
