--- a/se-hcc.html
+++ b/se-hcc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: hcc.html
+title: HCC - Hispania CW Club (Spanska telegrafiklubben)
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/hcc.gif" alt="" align=left></p>
@@ -40,6 +40,3 @@ Tävlingar:
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
-
