--- a/se-hsc.html
+++ b/se-hsc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: hsc.html
+title: "HSC: High Speed Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <img src="imgsclub/hsc.gif" alt="" align=left>
 <br clear="left">
 <p><hr><p>
@@ -32,6 +32,3 @@ Websidor:<br clear="left">
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
-
