--- a/se-iqrp.html
+++ b/se-iqrp.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: iqrp.html
+title: "I-QRP-C: Italian QRP Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/iqrp.gif" alt="" align=left></p>
@@ -26,5 +26,3 @@ Kontakt E-mail...i3ffe (at-symbol) quipo.it...
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
