--- a/se-itc.html
+++ b/se-itc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: itc.html
+title: "ITC: Italian Telegraphy Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/itc.gif" alt="" align=left></p>
@@ -30,5 +30,3 @@ Klubben sköts av:<br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
