--- a/se-lzcwc.html
+++ b/se-lzcwc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: lzcwc.html
+title: LZCWC LZ CW Club - Contest group
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/lzcwc.gif" alt="" align=left></p>
@@ -42,5 +42,3 @@ Nomineringar och röstningar sker vid rundaborden.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
