--- a/se-oecwg.html
+++ b/se-oecwg.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: oecwg.html
+title: OE-CW-Gemeinschaft
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 
@@ -70,5 +70,3 @@ Den första lördagen varje månad på 3575 klockan 8 lokal tid.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
