--- a/se-rtc.html
+++ b/se-rtc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: rtc.html
+title: RTC Radio Telegraphy Club (Radiotelegrafiklubben)
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 
@@ -41,5 +41,3 @@ Tre diplom ges ut nämligen W-RTC-M, CWD, CWAA.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
