--- a/se-ruqrp.html
+++ b/se-ruqrp.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: ruqrp.html
+title: "RUQRP: RU QRP Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/ruqrp.gif" alt="" align=left></p>
@@ -30,5 +30,3 @@ UE3QRP & RU9QRP/9  HQ-stationer
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
