--- a/se-shsc.html
+++ b/se-shsc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: shsc.html
+title: "SHSC: Super High Speed Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 <p><img src="imgsclub/shsc.gif" alt="" align=left></p>
 <p align="left">
@@ -17,6 +17,3 @@ originalhref: shsc.html
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
-
