--- a/se-ucwc.html
+++ b/se-ucwc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: ucwc.html
+title: 'UCWC: THE MORSE RADIOTELEGRAPHY CLUB "UCWC" - MEZHDUNARODNYJ RADIOTELEGRAFNYJ KLUB KOROTKOVOLNOVIKOV'
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <hr>
 <p><img src="imgsclub/ucwc.gif" alt=""></p>
 <a href="http://morse.cjb.net">
@@ -22,5 +22,3 @@ OSS. klubb för telegrafientusiaster.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
