--- a/se-agcw.html
+++ b/se-agcw.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: agcw.html
+title: "AGCW: Activity Group CW-DL"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/agcw.gif" align=left alt=""></p>
@@ -32,6 +32,3 @@ AGCW har nära relationer med den vanliga amatörradioklubben i tyskland -
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-
-</body>
-</html>
