--- a/se-arci.html
+++ b/se-arci.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: arci.html
+title: QRP-ARCI
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/arci.gif" alt="" align=left></p>
@@ -18,6 +18,3 @@ Det är en stor amerikansk klubb som ägnar sig åt lågeffekt-QRP.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-
-</body>
-</html>
