--- a/se-ctc.html
+++ b/se-ctc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: ctc.html
+title: "CTC: Croatian Telegraphy Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/ctc.gif" alt="" align=left></p>
@@ -32,5 +32,3 @@ Sekreterare: <br>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
