--- a/se-eacw.html
+++ b/se-eacw.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: eacw.html
+title: EACW
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/eacw.gif" alt="" align=left></p>
@@ -49,6 +49,3 @@ Konktatperson, webmaster och mailinglistadministrator är
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
-
