--- a/se-eaqrp.html
+++ b/se-eaqrp.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: eaqrp.html
+title: EA-QRP-C
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/eaqrp.gif" alt="" align=left></p>
@@ -19,5 +19,3 @@ i vilken mod som helst då man använder lite eller mycket lite effekt.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
