--- a/se-ehsc.html
+++ b/se-ehsc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: ehsc.html
+title: "EHSC: Extremely High Speed Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 <p><img src="imgsclub/ehsc.gif" alt="" align=left></p>
 <p align="left">
@@ -18,5 +18,3 @@ de som gillar telegrafi i hastigheter på åtminstone 60 wpm
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
