--- a/se-gacw.html
+++ b/se-gacw.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: gacw.html
+title: "GACW: Grupo Argentino de CW"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/gacw.gif" alt="" align=left></p>
@@ -52,6 +52,3 @@ E-mail:...gacw (AT-SYMBOL) lan.no-ip.org...
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
-
