--- a/se-htc.html
+++ b/se-htc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: htc.html
+title: "HTC: Helvetia Telegraphy Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/htc.gif" alt="" align=left></p>
@@ -19,5 +19,3 @@ Håll utkik efter deras klubbstationer HB9HC och HB9HTC.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
