--- a/se-inorc.html
+++ b/se-inorc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: inorc.html
+title: 'INORC: Italian Naval "Old Rhythmers" Club'
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/inorc.gif" alt="" align=left></p>
@@ -50,5 +50,3 @@ Email:...i1qod (at-tecknet) Lnet . it...
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
