--- a/se-isqrp.html
+++ b/se-isqrp.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: isqrp.html
+title: IS-QRP Associazione Radioamatoriale Sardinia QRP Club
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/isqrp.gif" alt="" align=center></p>
@@ -22,5 +22,3 @@ Mottot är: "Bygg, Lär, Lär ut".
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
