--- a/se-scag.html
+++ b/se-scag.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: scag.html
+title: SCAG Scandianvian CW Activity Group
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 
@@ -25,5 +25,3 @@ bulletinen "SCAG-NL" är skriven på danska eller svenska
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
