--- a/se-spcwc.html
+++ b/se-spcwc.html
@@ -1,9 +1,10 @@
 ---
+priority: 1
 translated: 2007-05-14
 originalhref: spcwc.html
+title: SPCWC
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/spcwc.gif" alt="" align=left></p>
@@ -62,5 +63,3 @@ E-mail:...qtc (at-symbol) post.pl...<p>
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
