--- a/se-vhsc.html
+++ b/se-vhsc.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: vhsc.html
+title: "VHSC: Very High Speed Club"
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 <p><img src="imgsclub/vhsc.gif" alt="" align=left></p>
@@ -68,5 +68,3 @@ E-mail...dingelom (at-symbol) hetnet.nl...
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
