--- a/se-ylcwg.html
+++ b/se-ylcwg.html
@@ -1,9 +1,9 @@
 ---
 translated: 2007-05-14
 originalhref: ylcwg.html
+title: YL-CW-Group
+layout: default
 ---
-<html>
-<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <center> <hr width="100%"> </center>
 
 
@@ -23,5 +23,3 @@ Förespråkar telegrafi i den kvinnliga amatörradiogemenskapen.
 <a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
-</body>
-</html>
