--- a/se-euqrs.html
+++ b/se-euqrs.html
@@ -90,7 +90,7 @@ C - Lyssnaramatörer.<br>
   för att andra ska förstå att du deltar i den här aktiviteten.
   Erfarna operatörer ska kalla CQ så mycket som möjligt för
   nykomlingar kan vara blyga och föredrar att välja de stationer som
-  de lätta kan tolka.</p>
+  de lätt kan tolka.</p>
 <p>Rekommenderat frekvensområde (inget krav) är +/- 10 kHz från
   centrumfrekvenserna nedan, inklusive WARC-banden (se nedan).</p>
 <p>Naturligtvis, icke-QRP-stationer ska inte ropa CQ på populära
