Update some translation of clubs

--- a/se-bqc.html
+++ b/se-bqc.html
@@ -1,5 +1,5 @@
 ---
-translated: 2007-05-14
+translated: 2024-03-31
 originalhref: bqc.html
 title: "BQC: Benelux QRP Club"
 layout: default
@@ -10,14 +10,12 @@ layout: default
 </center><p align="left">
 <ul>
 
-<a href="http://home.wanadoo.nl/bqc/index.html"><b>BQC: </b></a>
+<a href="http://www.beneluxqrpclub.nl"><b>BQC: </b></a>
 <b>B</b>enelux <b>Q</b>RP <b>C</b>lub <br>
 Denna klubb är ägnad åt QRP och definierar det som 5W HF output.
 Klubben är öppen för alla QRP-enthusiaster och 
 ger varje kvartal ut en tidning på holländska.
 Tidningen är till för QRP-operatörer och hemmabyggare.
-Adressen för att kontakta klubben är:
-Benelux QRP Club, Postbus 15, 2100 AA, Heemstede, Nederländerna
 <p>
 </ul>
 <center> <hr width="100%"> </center>
