--- a/se-cft.html
+++ b/se-cft.html
@@ -1,5 +1,5 @@
 ---
-translated: 2007-05-14
+translated: 2024-03-31
 originalhref: cft.html
 title: Club Francophone Télégraphiste
 layout: default
@@ -17,18 +17,8 @@ amatöranda i allmänhet.
 Klubben kommer ursprungligen från de fransktalande delarna av Belgien
 men internationella medlemmar är också välkomna.
 </p>
-<p>
-För att bli medlem måste du kontakta klubbens grundare:
-ON4KML - ON4LDL - ON4LEX - ON4RU - ON4KMB - ON4WC - ON4KRS
-eller deras klubbstation
-ON4CPN,
-företrädesvis på fredagkvällar på 3520 kHz kl 21 lokal tid.
-QSO:et måste vara minst 15 minuter långt.
-</p><p> 
 Rekommenderade QRGs 3520, 7020, 14020, 21020 kHz.
-</p><p>
-Mer information från
-E-mail...r.michaux (at symbol) skynet.be...
+Kolla på CFTs hemsida för regelbundna sked eller fråga via klubbens email on5cft (at-symbolen) gmail.com .
 <br>
 <a href="imgsclub/logo_cft2.jpg">Klicka här för att se CFT-logon i storformat
 såsom den är designad av F6IIE.
