--- a/se-ctc.html
+++ b/se-ctc.html
@@ -1,5 +1,5 @@
 ---
-translated: 2007-05-14
+translated: 2024-03-31
 originalhref: ctc.html
 title: "CTC: Croatian Telegraphy Club"
 layout: default
@@ -9,23 +9,17 @@ layout: default
 <p><img src="imgsclub/ctc.gif" alt="" align=left></p>
 </center><p align="left">
 <ul>
-<b>CTC: </b>Croatian Telegraphy Club <br>
+<div styel="margin-left: 2em"><b>9A-CW-G: </b><a href=
+"http://web.hamradio.hr/ctc/">Croatian Telegraphy Club</a>
+<br>
 Kroatiska telegrafiklubben
 <p>
-Telegrafiklubb i Kroatien som grundades den 12:e december 2001.<br>
+Telegrafiklubb i Kroatien:
 <br>
-Enda kravet för medlemsskap är att vara en aktiv
-radioamatörtelegrafioperatör.
-Rekommenderade arbetsfrekvenser: 3.530, 7.015, 14.030, 21.030, och 28.030 MHz.
-<br>
-Tillgänglig E-mailadress:...9a3fo (at) hi.hinet.hr...
-<br>
-Sekreterare: <br>
-                     Mladen Buzic<br>
-                     Franjevacka 5<br>
-                     42220 Novi Marof<br>
-                     Kroatien<br>
-<p>
-</ul>
+<p>Kroatiska telegrafiklubben är en internationelle radioamatör-klubb
+med gratis medlemsskap för telegrafiälskare i hela världen.
+<p>CTC-frekvenser är: 3.530 - 7.015 - 14.030 - 21.030 - 28.030 MHz .
+<p>Den andra fredagen i december från 00:00 UTC till 24:00 UTC samlas vi på dessa frekvenser för då är det CTCs födelsedag.
+</div>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
