Upload how this looks like 2024-05-17

--- a/eucw.org/cz-euqrs.html
+++ b/eucw.org/cz-euqrs.html
@@ -17,27 +17,6 @@
 <td align="right"><img src="agcw.gif" alt=""></td>
 </tr>
 </table>
-<p align="center">Pravidla v jednotlivých jazycích<br>
-<a href="euqrs.html">
-<img src="f/uk.gif" width="30" height="20" alt="EN"></a>
-&nbsp;
-<a href="d/Deuqrs.html">
-<img src="f/de.gif" width="30" height="20" alt="DE"></a>
-&nbsp;
-<a href="pl-euqrs.html">
-<img src="f/pl.gif" width="30" height="20" alt="PL"></a>
-&nbsp;
-<a href="hu-euqrs.html">
-<img src="f/hu.gif" width="30" height="20" alt="HU"></a>
-&nbsp;
-<a href="fr-euqrs.html"> 
-<img src="f/fr.gif" width="30" height="20" alt="FR"></a>
-&nbsp;
-<a href="es-euqrs.html">
-<img src="f/es.gif" width="30" height="20" alt="ES"></a>
-&nbsp;
-<a href="it-euqrs.html">
-<img src="f/it.gif" width="30" height="20" alt="IT"></a>
 <h3>OBECNÉ</h3>
 <p>EuCW srdečně zve všechny radioamatéry a rádiové posluchače k účasti 
 v každoročním týdnu QRS aktivity EuCW. Nejedná se o závod, naopak,
@@ -68,9 +47,11 @@ uveď, prosím, tuto skutečnost v deníku také.</p>
 <p>Pondělí 0000z až pátek 2359z v týdnu po 4. neděli v dubnu.</p>
 <pre>
     Např.:
-    2022: 25. dubna, 00:00 UTC až 29. dubna, 23:59 UTC
-    2023: 24. dubna, 00:00 UTC až 28. dubna, 23:59 UTC
     2024: 29. dubna, 00:00 UTC až 3. května, 23:59 UTC
+    2025: 28. dubna, 00:00 UTC až 2. května, 23:59 UTC
+    2026: 27. dubna, 00:00 UTC až 1. května, 23:59 UTC
+    2027: 26. dubna, 00:00 UTC až 30. dubna, 23:59 UTC
+    2028: 25. dubna, 00:00 UTC až 29. dubna, 23:59 UTC
 </pre>
 <h3>DRUH PROVOZU</h3>
 CW/A1A (Strojové dekodéry nejsou povoleny)
