--- a/eucw.org/euqrs.html
+++ b/eucw.org/euqrs.html
@@ -70,6 +70,8 @@ Sunday in April.</p>
     Examples:
     2024: April 29, 00:00 UTC thru May 3, 23:59 UTC
     2025: April 28, 00:00 UTC thru May 2, 23:59 UTC
+    2026: April 27, 00:00 UTC thru May 1, 23:59 UTC
+    2027: April 26, 00:00 UTC thru April 30, 23:59 UTC
 </pre>
 <h3>MODE</h3>
 CW/A1A (No machine decoders allowed)
