--- a/eucw.org/hu-euqrs.html
+++ b/eucw.org/hu-euqrs.html
@@ -25,10 +25,10 @@ aktivit&#225;si h&#233;t</h1>
 <h2 id="az-aktvit&#225;s-ideje">Az aktvit&#225;s ideje</h2>
 <p>Minden &#233;v negyedik vas&#225;rnapja ut&#225;ni h&#233;tf&#337; 0000-t&#243;l p&#233;ntek 2359-ig</p>
 <p>
-2023: &#225;prilis 24, 00:00 UTC-t&#337;l &#225;prilis 28, 23:59 UTC-ig<br>
-2022: &#225;prilis 25, 00:00 UTC-t&#337;l &#225;prilis 29, 23:59 UTC-ig<br>
-2021: &#225;prilis 26, 00:00 UTC-t&#337;l &#225;prilis 30, 23:59 UTC-ig<br>
-2020: &#225;prilis 29, 00:00 UTC-t&#337;l m&#225;jus 01, 23:59 UTC-ig</p>
+2024: &#225;prilis 29, 00:00 UTC-t&#337;l m&#225;jus 03, 23:59 UTC-ig<br>
+2025: &#225;prilis 28, 00:00 UTC-t&#337;l m&#225;jus 02, 23:59 UTC-ig<br>
+2026: &#225;prilis 27, 00:00 UTC-t&#337;l m&#225;jus 01, 23:59 UTC-ig<br>
+2027: &#225;prilis 26, 00:00 UTC-t&#337;l &#225;prilis 30, 23:59 UTC-ig<br>
 <h2 id="&#252;zemm&#243;d">&#220;zemm&#243;d</h2>
 <p>CW/A1A (dek&#243;der haszn&#225;lata nem megengedett)</p>
 <h2 id="kateg&#243;ri&#225;k">Kateg&#243;ri&#225;k</h2>
