--- a/eucw.org/it-euqrs.html
+++ b/eucw.org/it-euqrs.html
@@ -46,11 +46,11 @@ usufruire di tale diritto, per favore, dichiaratelo anche, espressamente,
 nel vostro log.</p>
 <h3 id="dateorari">DATE/ORARI</h3>
 <p>Dal lunedì alle 00.00 z al venerdì alle 23.59z dopo la 4° domenica di
-Aprile. Pertanto: 
-<br>2019: 29 Aprile 00:00 UTC al 3 Maggio 23:59 UTC</p>
-<br>2020: 27 Aprile 00:00 UTC al 1 Maggio 23:59 UTC</p>
-<br>2021: 26 Aprile 00:00 UTC al 30 Aprile 23:59 UTC</p>
-<br>2022: 25 Aprile 00:00 UTC al 29 Aprile 23:59 UTC</p>
+Aprile. Pertanto: <br>
+2024: 29 Aprile 00:00 UTC al 3 Maggio 23:59 UTC<br>
+2025: 28 Aprile 00:00 UTC al 2 Maggio 23:59 UTC<br>
+2026: 27 Aprile 00:00 UTC al 1 Maggio 23:59 UTC<br>
+2027: 26 Aprile 00:00 UTC al 30 Aprile 23:59 UTC<br>
 <h3 id="modi">MODI</h3>
 <p>CW/A1A (Non sono ammessi computer e decodificatori automatici)</p>
 <h3 id="classi">CLASSI</h3>
