--- a/eucw.org/news.html
+++ b/eucw.org/news.html
@@ -3,6 +3,9 @@
 <BR CLEAR=LEFT>
 <H1>News and Changes</H1>
 <P>
+2024-05-08 April <a href="sl2404.txt"> Text </a> and <a href="sl2404.png"> Map </a>results of Snakes and Ladders.<p>
+2024-04-08 March <a href="sl2403.txt"> Text </a> and <a href="sl2403.png"> Map </a>results of Snakes and Ladders.<p>
+2024-03-31 Swedish translation of the QRS Week rules available. Tnx SM5OUU.<p>
 2024-03-10 February <a href="sl2402.txt"> Text </a> and <a href="sl2402.png"> Map </a>results of Snakes and Ladders.<p>
 2024-02-09 January <a href="sl2401.txt"> Text </a> and <a href="sl2401.png"> Map </a>results of Snakes and Ladders.<p>
 2023-11-08 November <a href="sl2311.txt"> Text </a> and <a href="sl2311.png"> Map </a>results of Snakes and Ladders.<p>
