Update translate with latest changes

--- a/se-euqrs.html
+++ b/se-euqrs.html
@@ -1,5 +1,5 @@
 ---
-translated: 2024-03-31
+translated: 2024-05-17
 originalhref: euqrs.html
 title: EuCWs QRS-vecka
 layout: default
@@ -70,6 +70,8 @@ layout: default
     Dvs.
     2024: 29e april, 00:00 UTC till 3e maj, 23:59 UTC
     2025: 28e april, 00:00 UTC till 2e maj, 23:59 UTC
+    2026: 27e april, 00:00 UTC till 1e maj, 23:59 UTC
+    2027: 26e april, 00:00 UTC till 30e april, 23:59 UTC
 </pre>
 <h3>MODER</h3>
 <p>CW/A1A (Datorer som hjälper till att avkoda telegrafin är inte
