Översatt en sida till

--- a/se-eu160.html
+++ b/se-eu160.html
@@ -1,4 +1,27 @@
 ---
+translated: 2024-06-16
 originalhref: eu160.html
+title: EuCW 160m
+layout: default
 ---
-{% include nottranslated.html %}
+<table width="100%">
+<tr>
+<td align="left"><img src="uft.gif" alt=""></td>
+<td align="center">
+<h1>DET EUROPEISKA TELEGRAFIFÖRBUNDET</h1>
+
+<h2 align="center">ON5ME-EuCW 160m CW party</h2>
+</td>
+<td align="right"><img src="eucwflag.gif" alt=""></td>
+</tr>
+</table>
+
+<p>
+Denna contest i början av januari sköts av UFT. Kolla de aktuella
+reglerna (på franska) vid
+<a
+HREF=https://www.uft.net/activites-et-concours/concours-eucw-uft-on5me/>
+https://www.uft.net/activites-et-concours/concours-eucw-uft-on5me/</a>
+</p>
+
+<hr>
