Upload how it looks like 2024-07-07

--- a/eucw.org/euqrs.html
+++ b/eucw.org/euqrs.html
@@ -262,6 +262,7 @@ rules.</p>
 <a href="euqrs18.html">2018</a> <a href="euqrs19.html">2019</a>
 <a href="euqrs20.html">2020</a> <a href="euqrs21.html">2021</a>
 <a href="euqrs22.html">2022</a> <a href="euqrs23.html">2023</a> 
+<a href="euqrs24.html">2024</a>
 </p>
 <P>
 The QRS Week is sponsored and organized by AGCW-DL.
