--- a/eucw.org/sl.html
+++ b/eucw.org/sl.html
@@ -25,9 +25,9 @@
 <h2 align="center">GENERAL</h2>
 
 <p>Welcome to Snakes And Ladders (S+L). S+L is the ONE AND ONLY activity
-on air which us hosted and organized by EUCW itself.</p> <p>All friends of
-EuCW may take part of this. This activity is centered on Europe, you do not
-have to reach faraway continents. Your are not penalized in this activity
+on air which is hosted and organized by EUCW itself.</p> <p>All friends of
+EuCW may be a part of this. This activity is centered on Europe, you do not
+have to reach faraway continents. You are not penalized in this activity
 if you have a common prefix, your call sign is as good as any other in
 this game. Be on air whenever you feel like being on air, there is no time
 limit. If you just want to be a general supporter of this activity, please
@@ -43,7 +43,7 @@ air.</p>
 <li>have an email account</li>
 <li>be able to produce an electronic log in ADIF format</li>
 </ul>
-<p>That's all. The first of these three conditions is not negotiable but you
+<p>That's all. The first of these three conditions is not negotiable, but you
 are not obliged to send a log every month. The other two conditions are not
 mandatory as long as you have a helper who can produce an electronic log
 for you.</p>
@@ -214,10 +214,7 @@ href=
 "sl2108.png">08</a> <a href="sl2109.png">09</a> <a href=
 "sl2110.png">10</a> <a href="sl2111.png">11</a> <a href=
 "sl2112.png">12</a></B><BR>
-<B>
-<h3>
-CURRENT RESULTS with <a href="sl3.html">Rules v.3</a> <BR>
-Reps 2022-I:
+V.3 Reps 2022-I:
 <a href="sl2201.txt">01</a>
 <a href="sl2202.txt">02</a>
 <a href="sl2203.txt">03</a>
@@ -236,9 +233,52 @@ href=
 "sl2208.png">08</a> <a href="sl2209.png">09</a> <a href=
 "sl2210.png">10</a> <a href="sl2211.png">11</a> <a href=
 "sl2212.png">12</a>
-</h3>
+<BR>
+V.3 Reps 2023-I:
+<a href="sl2301.txt">01</a>
+<a href="sl2302.txt">02</a>
+<a href="sl2303.txt">03</a>
+<a href="sl2304.txt">04</a>
+<a href="sl2305.txt">05</a> <a href="sl2306.txt">06</a> II: <a
+href=
+"sl2307.txt">07</a> <a href="sl2308.txt">08</a> <a href=
+"sl2309.txt">09</a> <a href="sl2310.txt">10</a> <a href=
+"sl2311.txt">11</a> <a href="sl2312.txt">12</a>
+<b>Maps</b> 2023-I:
+<a href="sl2301.png">01</a>
+<a href="sl2302.png">02</a>
+<a href="sl2303.png">03</a>
+<a href="sl2304.png">04</a> <a href="sl2305.png">05</a> <a href=
+"sl2306.png">06</a> II: <a href="sl2307.png">07</a> <a href=
+"sl2308.png">08</a> <a href="sl2309.png">09</a> <a href=
+"sl2310.png">10</a> <a href="sl2311.png">11</a> <a href=
+"sl2312.png">12</a>
 </B>
 
+<B>
+<h3>
+CURRENT RESULTS with <a href="sl3.html">Rules v.3</a> <BR>
+Reps 2024-I:
+<a href="sl2401.txt">01</a>
+<a href="sl2402.txt">02</a>
+<a href="sl2403.txt">03</a>
+<a href="sl2404.txt">04</a>
+<a href="sl2405.txt">05</a> <a href="https://eucw.org/sl2406.txt">06</a> II: <a
+href=
+"https://eucw.org/sl2407.txt">07</a> <a href="https://eucw.org/sl2408.txt">08</a> <a href=
+"https://eucw.org/sl2409.txt">09</a> <a href="https://eucw.org/sl2410.txt">10</a> <a href=
+"https://eucw.org/sl2411.txt">11</a> <a href="https://eucw.org/sl2412.txt">12</a>
+<b>Maps</b> 2024-I:
+<a href="sl2401.png">01</a>
+<a href="sl2402.png">02</a>
+<a href="sl2403.png">03</a>
+<a href="sl2404.png">04</a> <a href="sl2405.png">05</a> <a href=
+"https://eucw.org/sl2406.png">06</a> II: <a href="https://eucw.org/sl2407.png">07</a> <a href=
+"https://eucw.org/sl2408.png">08</a> <a href="https://eucw.org/sl2409.png">09</a> <a href=
+"https://eucw.org/sl2410.png">10</a> <a href="https://eucw.org/sl2411.png">11</a> <a href=
+"https://eucw.org/sl2412.png">12</a>
+</h3>
+</B>
 
 </body><a href="dp.pdf">
   <p><a href="root.html">Back</a> to EuCW Start Page<br>
