--- a/eucw.org/news.html
+++ b/eucw.org/news.html
@@ -3,6 +3,7 @@
 <BR CLEAR=LEFT>
 <H1>News and Changes</H1>
 <P>
+2024-06-10 May <a href="sl2405.txt"> Text </a> and <a href="sl2405.png"> Map </a>results of Snakes and Ladders.<p>
 2024-05-08 April <a href="sl2404.txt"> Text </a> and <a href="sl2404.png"> Map </a>results of Snakes and Ladders.<p>
 2024-04-08 March <a href="sl2403.txt"> Text </a> and <a href="sl2403.png"> Map </a>results of Snakes and Ladders.<p>
 2024-03-31 Swedish translation of the QRS Week rules available. Tnx SM5OUU.<p>
