Update translation with result for 2024

--- a/se-euqrs.html
+++ b/se-euqrs.html
@@ -1,5 +1,5 @@
 ---
-translated: 2024-05-17
+translated: 2024-07-07
 originalhref: euqrs.html
 title: EuCWs QRS-vecka
 layout: default
@@ -298,6 +298,7 @@ stationerna.</p>
 <a href="https://eucw.org/euqrs21.html">2021</a>
 <a href="https://eucw.org/euqrs22.html">2022</a>
 <a href="https://eucw.org/euqrs23.html">2023</a> 
+<a href="https://eucw.org/euqrs24.html">2024</a> 
 </p>
 <p>
 EuCWs QRS-vecka sponsras och organiseras av AGCW-DL.
