Create club layout for clubs

--- a/se-hcc.html
+++ b/se-hcc.html
@@ -2,15 +2,9 @@
 translated: 2007-05-14
 originalhref: hcc.html
 title: HCC - Hispania CW Club (Spanska telegrafiklubben)
-layout: default
+clubicon: hcc.gif
+layout: club
 ---
-<center> <hr width="100%"> </center>
-
-<p><img src="imgsclub/hcc.gif" alt="" align=left></p>
-</center><p align="left">
-<b> HCC - Hispania CW Club (Spanska telegrafiklubben)
-</b>
-<p>
 Sedan 1983 är denna klubb aktiv i Spanien och förespråkar telegrafikonsten.
 För närvarande är det ca 500 medlemmar.
 Medlemsskap är öppet för alla som har en spansk licens.
@@ -33,7 +27,3 @@ Tävlingar:
 <li>MARATON
 <li>CRONOS
 </ul>
-<br clear="left">
-<p>
-<center> <hr width="100%"> </center>
-<a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
