--- a/se-htc.html
+++ b/se-htc.html
@@ -2,17 +2,11 @@
 translated: 2007-05-14
 originalhref: htc.html
 title: "HTC: Helvetia Telegraphy Club"
-layout: default
+cluburl: http://www.htc.ch
+clubacronym: HTC
+clubformattedname: <b>H</b>elvetia <b>T</b>elegraphy <b>C</b>lub (Schweiziska telegrafiklubben)
+clubicon: htc.gif
+layout: club
 ---
-<center> <hr width="100%"> </center>
-
-<p><img src="imgsclub/htc.gif" alt="" align=left></p>
-<p align="left">
-<a href="http://www.htc.ch"><b>HTC:</b></a>
-<b>H</b>elvetia <b>T</b>elegraphy <b>C</b>lub (Schweiziska telegrafiklubben)<br>
 Detta är en schweizisk klubb för telegrafivänner.
 Håll utkik efter deras klubbstationer HB9HC och HB9HTC.
-<br clear="left"></p>
-
-<center> <hr width="100%"> </center>
-<a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
