Upload how it looks like 2024-08-23

--- a/eucw.org/news.html
+++ b/eucw.org/news.html
@@ -3,6 +3,8 @@
 <BR CLEAR=LEFT>
 <H1>News and Changes</H1>
 <P>
+2024-08-09 July <a href="sl2407.txt"> Text </a> and <a href="sl2407.png"> Map </a>results of Snakes and Ladders.<p>
+2024-07-09 1st half year 2024 <a href="sl2406.txt"> Text </a> and <a href="sl2406.png"> Map </a>results of Snakes and Ladders.<p>
 2024-06-10 May <a href="sl2405.txt"> Text </a> and <a href="sl2405.png"> Map </a>results of Snakes and Ladders.<p>
 2024-05-08 April <a href="sl2404.txt"> Text </a> and <a href="sl2404.png"> Map </a>results of Snakes and Ladders.<p>
 2024-04-08 March <a href="sl2403.txt"> Text </a> and <a href="sl2403.png"> Map </a>results of Snakes and Ladders.<p>
