--- a/eucw.org/qtc.html
+++ b/eucw.org/qtc.html
@@ -12,6 +12,7 @@ EuCW Bulletins<BR>
 </CENTER>
 <P>
 List of available Bulletins edited by RM2D<P>
+<A HREF="qtc243.txt">2024Q3 from 2024-07-10 (ASCII TXT)</A><BR>
 <A HREF="qtc242.txt">2024Q2 from 2024-04-05 (ASCII TXT)</A><BR>
 <A HREF="qtc241.txt">2024Q1 from 2024-01-10 (ASCII TXT)</A><BR>
 <A HREF="qtc234.txt">2023Q4 from 2023-10-05 (ASCII TXT)</A><BR>
