--- a/eucw.org/index.html
+++ b/eucw.org/index.html
@@ -58,8 +58,8 @@ The European CW Association<BR>
 <FONT size="-2">Web space sponsored by AGCW</FONT><BR></H1>
 <!-- BEGINNEWS -->
 <h3><hr><br>
-2024-06-10 May <a href="sl2405.txt"> Text </a> and <a href="sl2405.png"> Map </a>results of Snakes and Ladders.<p><p><hr>
-2024-05-08 April <a href="sl2404.txt"> Text </a> and <a href="sl2404.png"> Map </a>results of Snakes and Ladders.<p><p><hr>
+2024-08-09 July <a href="sl2407.txt"> Text </a> and <a href="sl2407.png"> Map </a>results of Snakes and Ladders.<p><p><hr>
+2024-07-09 1st half year 2024 <a href="sl2406.txt"> Text </a> and <a href="sl2406.png"> Map </a>results of Snakes and Ladders.<p><p><hr>
 </h3>
 <!-- ENDNEWS -->
 <TABLE width="100%" border="0" cellpadding="2">
