--- a/eucw.org/news.html
+++ b/eucw.org/news.html
@@ -3,6 +3,9 @@
 <BR CLEAR=LEFT>
 <H1>News and Changes</H1>
 <P>
+2024-10-10 Current <a href="qtc244.txt">EUCW Bulletin</a> available.<p>
+2024-10-09 September <a href="sl2409.txt"> Text </a> and <a href="sl2409.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
+2024-09-09 August <a href="sl2408.txt"> Text </a> and <a href="sl2408.png"> Map </a>results of Snakes and Ladders.<p>
 2024-08-09 July <a href="sl2407.txt"> Text </a> and <a href="sl2407.png"> Map </a>results of Snakes and Ladders.<p>
 2024-07-09 1st half year 2024 <a href="sl2406.txt"> Text </a> and <a href="sl2406.png"> Map </a>results of Snakes and Ladders.<p>
 2024-06-10 May <a href="sl2405.txt"> Text </a> and <a href="sl2405.png"> Map </a>results of Snakes and Ladders.<p>
