--- a/eucw.org/root.html
+++ b/eucw.org/root.html
@@ -58,8 +58,8 @@ The European CW Association<BR>
 <FONT size="-2">Web space sponsored by AGCW</FONT><BR></H1>
 <!-- BEGINNEWS -->
 <h3><hr><br>
-2024-08-09 July <a href="sl2407.txt"> Text </a> and <a href="sl2407.png"> Map </a>results of Snakes and Ladders.<p><p><hr>
-2024-07-09 1st half year 2024 <a href="sl2406.txt"> Text </a> and <a href="sl2406.png"> Map </a>results of Snakes and Ladders.<p><p><hr>
+2024-10-10 Current <a href="qtc244.txt">EUCW Bulletin</a> available.<p><p><hr>
+2024-10-09 September <a href="sl2409.txt"> Text </a> and <a href="sl2409.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p><p><hr>
 </h3>
 <!-- ENDNEWS -->
 <TABLE width="100%" border="0" cellpadding="2">
