--- a/eucw.org/sl.html
+++ b/eucw.org/sl.html
@@ -265,8 +265,8 @@ Reps 2024-I:
 <a href="sl2404.txt">04</a>
 <a href="sl2405.txt">05</a> <a href="sl2406.txt">06</a> II: <a
 href=
-"sl2407.txt">07</a> <a href="https://eucw.org/sl2408.txt">08</a> <a href=
-"https://eucw.org/sl2409.txt">09</a> <a href="https://eucw.org/sl2410.txt">10</a> <a href=
+"sl2407.txt">07</a> <a href="sl2408.txt">08</a> <a href=
+"sl2409.txt">09</a> <a href="https://eucw.org/sl2410.txt">10</a> <a href=
 "https://eucw.org/sl2411.txt">11</a> <a href="https://eucw.org/sl2412.txt">12</a>
 <b>Maps</b> 2024-I:
 <a href="sl2401.png">01</a>
@@ -274,7 +274,7 @@ href=
 <a href="sl2403.png">03</a>
 <a href="sl2404.png">04</a> <a href="sl2405.png">05</a> <a href=
 "sl2406.png">06</a> II: <a href="sl2407.png">07</a> <a href=
-"https://eucw.org/sl2408.png">08</a> <a href="https://eucw.org/sl2409.png">09</a> <a href=
+"sl2408.png">08</a> <a href="sl2409.png">09</a> <a href=
 "https://eucw.org/sl2410.png">10</a> <a href="https://eucw.org/sl2411.png">11</a> <a href=
 "https://eucw.org/sl2412.png">12</a>
 </h3>
