Upload how it looks like 2024-12-20

--- a/eucw.org/news.html
+++ b/eucw.org/news.html
@@ -3,6 +3,8 @@
 <BR CLEAR=LEFT>
 <H1>News and Changes</H1>
 <P>
+2024-11-09 November <a href="sl2411.txt"> Text </a> and <a href="sl2411.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
+2024-10-09 October <a href="sl2410.txt"> Text </a> and <a href="sl2410.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
 2024-10-10 Current <a href="qtc244.txt">EUCW Bulletin</a> available.<p>
 2024-10-09 September <a href="sl2409.txt"> Text </a> and <a href="sl2409.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
 2024-09-09 August <a href="sl2408.txt"> Text </a> and <a href="sl2408.png"> Map </a>results of Snakes and Ladders.<p>
